# leap

./: .gitignore  Makefile.am  Makefile.in  README.md  changes  configure  configure.in
admin/: mytags
base/: leap-config.cpp  leap-config.h
config/bm/leap/: demos.cfx
debian/: changelog  control  leap-11.03.dirs  leap-bin.dirs  leap.dirs  rules
docs/: Makefile.am  Makefile.in  README  doxygen.config  doxyhtmlgen.xsl  doxylayout.xml  doxysourcehtmlgen.py  stylesheet.css
docs/search/: search.css  search.html  search.js
experiments/leap/demos/: demos.benchmarks  demos.models
experiments/leap/nightly/: nightly.benchmarks  nightly.models
experiments/leap/quick/: quick.benchmarks  quick.models
experiments/leap/regression/: regression.benchmarks  regression.models
lib/: README
lib/libli/: README  SConstruct  li.hpp  libli.cpp
libperl/: Makefile.am  Makefile.in  README
libperl/Leap/: MANIFEST  Makefile.PL  README
libperl/Leap/lib/: Leap.pm
libperl/Leap/lib/Leap/: Bluespec.pm  Build.pm  DictBuilder.pm  FPGA.pm  RRR.pm  Templates.pm  Util.pm  Xilinx.pm
modules/: README
modules/bluespec/common/: project-common-hybrid.awb
modules/bluespec/common/base/: bluespec_base.awb
modules/bluespec/common/null/: bluespec_null.awb
modules/bluespec/common/soft_clock/: basic-clock-lib.awb  basic-clock-lib.bsv  basic-clock.bsv
modules/bluespec/common/soft_connections/: soft_connections.awb
modules/bluespec/common/soft_services/: smart_synth_boundaries.bsv  smart_synthesis_boundaries.bsv  softServicesLib.bsv  soft_services_deps.awb  soft_services_lib.awb
modules/bluespec/librl/base/: hash-bits.bsv
modules/bluespec/librl/storage/: fifo-mem.bsv
modules/hasim/controller/: controller-basic-hybrid.awb  controller-basic.bsv  controller-basic.cpp  controller-pure.h  controller-standard.awb  controller-standard.h
modules/hasim/controller/central_controllers/: central-controllers-standard.cpp  central-controllers-standard.h
modules/hasim/controller/command_switches/: command-switch-processor.cpp  default-switches.h  standard-command-switches.awb
modules/hasim/controller/local_controllers/: local-controllers-standard.awb
modules/hasim/controller/starter/: hybrid-basic-starter-services.rrr  hybrid-basic-starter.bsv  null-starter.awb
modules/hasim/util/platform-services/: platform-services-null.awb  platform-services-null.bsv  platform-services-standard.awb
modules/hasim/util/smart-synthesis-boundaries/: bury-connections.bsv
modules/leap/: README
modules/leap/build-support/: README
modules/leap/build-support/build-pipelines/: README
modules/leap/build-support/project/: AWBParams.py  CommandLine.py  Makefile.top.template  Module.py  ModuleList.py  ProjectDependency.py  README  SCons.dict.template  SCons.hw.pipeline.template  SCons.hw.template  SCons.iface.template  SCons.sw.pipeline.template  SCons.top.pipeline.template  SCons.top.template  SConstruct.top.template  SortPkgs.py  Source.py  Utils.py  hardware-done.h  project-bare-hw-main.bsv  project-common-hybrid.awb  project-hw-main.bsv  project-hybrid-init.cpp  project-hybrid-init.h  project-hybrid-main.bsv  project-hybrid-main.cpp  project-hybrid.awb  project-pipeline-bare-hw.awb  project-pipeline-new.awb  project-pipeline.awb  project-sw-main.cpp  project-utils.cpp  project-utils.h  project-vico-hybrid-main.cpp  project-vico-hybrid-main.h  project-vico-pipeline.awb
modules/leap/build-support/smart-synthesis-boundaries/: bury-connections.bsv  expose-connections.bsv  smart-synth-boundaries.awb  with-connections.bsv
modules/leap/examples/: README
modules/leap/examples/hello-world/: README  hello-world.awb  hello-world.bsv  hello-world.cpp  hello-world.dic  hello-world.h
modules/leap/examples/traffic-light/: README  traffic-light-system.awb  traffic-light-system.bsv
modules/leap/libraries/: README
modules/leap/libraries/command-switches/: README  command-switch-processor.cpp  command-switch-processor.h  command-switches.h  default-switches.cpp  default-switches.h  (+1 more)
modules/leap/virtual-platform/: README  fpga-environment-bare.awb  fpga-environment.awb  std-virtual-platform.awb  std-virtual-platform.bsv  std-virtual-platform.cpp  std-virtual-platform.h
modules/model/: Makefile.include.template  Makefile.sub.template  SCons.hw.template  SCons.iface.template  SCons.top.template  default_software_system.awb  default_software_system.h  hasim_hwonly_model.awb  hasim_model.awb  hasim_model.bsv  hybrid_system.awb  main.cpp  pure_bluespec_hybrid_model.awb  pure_bluespec_main.cpp  pure_bluespec_main.h  pure_bluespec_model.awb  pure_bluespec_model.bsv
modules/project/: ModuleList.py  SCons.dict.template  SCons.hw.pipeline.template  SCons.hw.template  SCons.top.pipeline.template  SCons.top.template  project-pipeline-new.awb
modules/project/bluespec/: BSV.py  MCDTcl.py  bluesim.py  bsv-exe.awb  mcd-tcl.awb  mcd.tcl
modules/project/pipelines/: VerilogPipeline.py
modules/project/synopsis/: Synplify.py
modules/project/xilinx/: XILINX_LOADER.py  XILINX_MAP.py  XILINX_PAR.py  xilinx_map.awb
modules/system/afu_system/: afu_system.awb  afu_system.bsv
modules/system/dme_system/: dme_system.awb  dme_system.bsv
modules/system/mulitplier_system/: multiplier_system.awb  multiplier_system.bsv  multiplier_system.txt
modules/system/switch_to_led_system/: switch_to_led_system.awb  switch_to_led_system.bsv  switch_to_led_system.txt
modules/system/traffic_light_system/: System.bsv  traffic_light_system.awb  traffic_light_system.txt
scripts/bmark/: run.bmark  setup-bmark
tools/: Makefile.am  Makefile.in
tools/leap/: Makefile.am  Makefile.in
tools/leap/leap-front-panel/: Makefile.am  Makefile.in  leap_front_panel.pm  leap_front_panel.qrc  leap_front_panel.ui  leap_front_panel.ui.h  leap_front_panel_header.pl
tools/leap/leap-front-panel-qt3/: Makefile.in  leap_front_panel.ui
tools/scripts/: Makefile.am  Makefile.in  leap-bsc-mkdepend  leap-configure  leap-connect  leap-dict  leap-gen-black-box  leap-make  leap-rrr-stubgen  leap-xilinx-summary
tools/scripts/bmark/: run.bmark  setup-bmark
(+1425 files in other folders)
