dnl Process this file with autoconf to produce a configure script.
AC_INIT([ASIM leap], [0.6], [joel.emer@intel.com], [leap])
AC_PREREQ(2.59) dnl required autoconf version
AC_CONFIG_SRCDIR([admin/packages/leap])
dnl AC_INIT(admin/packages/leap)

dnl Installation defaults
dnl AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(asimstarter)

AC_CONFIG_AUX_DIR(scripts)

AM_INIT_AUTOMAKE([1.8.3 foreign subdir-objects]) dnl automake version + options
AM_CONFIG_HEADER(include/config.h)

#
# Control perl install
#
AC_ARG_ENABLE([perl-vendor-install],
      AC_HELP_STRING([--enable-perl-vendor-install],
                     [Do a perl vendor install]),
      perlinstalldirs=vendor,
      perlinstalldirs=site)


AC_SUBST(package)
package=leap

dnl Get release tag out of package file.
dnl The tag is assumed to be in a line that looks like: Tag=<tagname>
AC_SUBST(release)
release=`grep '^Tag=' ./admin/packages/$package | sed 's/Tag=//'`


configdir='${sysconfdir}/asim/${release}'
AC_SUBST(configdir)


packagedir='${datadir}/asim'
AC_SUBST(packagedir)


codedir='${packagedir}/${package}/${release}'
AC_SUBST(codedir)

# This is where architecture dependent info is placed
tooldir='${libexecdir}/asim/${release}'
AC_SUBST(tooldir)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL

dnl Check for scons
AC_CHECK_PROG(have_scons, scons, yes)
if test "X$have_scons" == "X"; then
   AC_MSG_ERROR([Scons is needed to build leap programs])
fi

dnl libperl
AC_CONFIG_FILES(libperl/Makefile)
dnl AC_CONFIG_FILES(libperl/Asim/lib/Asim.pm)

# run perl MakeMaker at configure time, not make time,
# to create the makefiles in the libperl tree:
AC_CONFIG_COMMANDS( libperl/Leap/Makefile                                        ,
		[cd libperl/Leap;      perl Makefile.PL PREFIX=$prefix INSTALLDIRS=$perlinstalldirs; cd ../..], 
                       		       [prefix=$prefix; perlinstalldirs=$perlinstalldirs  ])


# tools top level
AC_CONFIG_FILES(tools/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/scripts/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/leap/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/leap/leap-front-panel/Makefile)

AC_OUTPUT(Makefile)
