dnl Process this file with autoconf to produce a configure script.
AC_INIT([ASIM leap], [0.6], [joel.emer@intel.com], [leap])
AC_PREREQ(2.59) dnl required autoconf version
AC_CONFIG_SRCDIR([admin/packages/leap])
dnl AC_INIT(admin/packages/leap)

dnl Installation defaults
dnl AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(asimstarter)

AC_CONFIG_AUX_DIR(aux-scripts)

AM_INIT_AUTOMAKE([1.8.3 foreign subdir-objects]) dnl automake version + options
AM_CONFIG_HEADER(include/config.h)

#
# Control perl install
#
AC_ARG_ENABLE([perl-vendor-install],
      AC_HELP_STRING([--enable-perl-vendor-install],
                     [Do a perl vendor install]),
      perlinstalldirs=vendor,
      perlinstalldirs=site)

#
# --enable-perlqt4
#
AC_ARG_ENABLE([perlqt4],
      AC_HELP_STRING([--enable-perlqt4=ARG],
                     [use perlqt4 [[ARG=no|yes]] (default=no with system-specific exceptions)]),
      asim_cv_enable_perlqt4=$enableval,
      asim_cv_enable_perlqt4=no)

# Force qt4 for Ubuntu Oneiric or later

if test $asim_cv_enable_perlqt4 = "no" -a -x /usr/bin/lsb_release -a $(lsb_release -s -i) = "Ubuntu" -a $(lsb_release -s -r | sed 's/\.//') -ge 1110
then
    asim_cv_enable_perlqt4="yes"
else
    asim_cv_enable_perlqt4="no"
fi

AM_CONDITIONAL([ENABLE_PERLQT4], [test "$asim_cv_enable_perlqt4" = yes])


AC_SUBST(package)
package=leap

dnl Get release tag out of package file.
dnl The tag is assumed to be in a line that looks like: Tag=<tagname>
AC_SUBST(release)
release=`grep '^Tag=' ./admin/packages/$package | sed 's/Tag=//'`


configdir='${sysconfdir}/asim/${release}'
AC_SUBST(configdir)


packagedir='${datadir}/asim/packages'
AC_SUBST(packagedir)


codedir='${packagedir}/${package}/${release}'
AC_SUBST(codedir)

# This is where architecture dependent info is placed
#tooldir='${libexecdir}/asim/${release}'
# For now we always treat the release for tools as HEAD
tooldir='${libexecdir}/asim/HEAD'
AC_SUBST(tooldir)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL

dnl Check for scons
AC_CHECK_PROG(have_scons, scons, yes)
if test "X$have_scons" == "X"; then
   AC_MSG_ERROR([Scons is needed to build leap programs])
fi

dnl libperl
AC_CONFIG_FILES(libperl/Makefile)
dnl AC_CONFIG_FILES(libperl/Asim/lib/Asim.pm)

# run perl MakeMaker at configure time, not make time,
# to create the makefiles in the libperl tree:
AC_CONFIG_COMMANDS( libperl/Leap/Makefile                                        ,
		[cd libperl/Leap;      perl Makefile.PL PREFIX=$prefix INSTALLDIRS=$perlinstalldirs; cd ../..], 
                       		       [prefix=$prefix; perlinstalldirs=$perlinstalldirs  ])


# tools top level
AC_CONFIG_FILES(tools/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/scripts/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/leap/Makefile)

# tools/scripts
AC_CONFIG_FILES(tools/leap/leap-front-panel/Makefile)
AC_CONFIG_FILES(tools/leap/leap-front-panel-qt3/Makefile)

AC_OUTPUT(Makefile)
